# project_kompute

./: .clang-format  .gitmodules  README.md  meson.build
lib/: compute_function.cpp  compute_function.h  compute_functions.h  kompute_device.cpp  kompute_device.h  kompute_manager.cpp  kompute_manager.h  meson.build  sliding_container.h  test.cpp  vector_operation.cpp  vector_operation.h  vulkan_compute_module.cpp  vulkan_compute_module.h  vulkan_gate.cpp  vulkan_gate.h
lib/shaders/: MaxvellBoltzmannDerivative0.comp  MaxvellBoltzmannDerivative1.comp  NormalDerivative0.comp  NormalDerivative1.comp  NormalDerivative2.comp  RayleighDerivative0.comp  RayleighDerivative1.comp  convert_to_header  convert_to_header.py  meson.build
subprojects/kompute-0.9.0/src/include/kompute/: Kompute.hpp
test/: test.cpp  test_fill_plots.cpp  test_fill_plots1.cpp  test_fill_plots_user_input.cpp
